
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int CLONE_NEWNS ;
 int CLONE_NEWUSER ;
 int MS_BIND ;
 int MS_REMOUNT ;
 int O_CLOEXEC ;
 int O_DIRECTORY ;
 int O_RDONLY ;
 int close (int) ;
 int dup3 (int,int ,int ) ;
 int err (int,char*) ;
 int evilfd ;
 int exit (int ) ;
 scalar_t__ mount (char const*,char const*,int *,int,int *) ;
 int open (char const*,int) ;
 int printf (char*) ;
 scalar_t__ unshare (int) ;

__attribute__((used)) static int child2(void *mnt_void)
{
   const char *mountpoint = mnt_void;
   int fd2;

   if (unshare(CLONE_NEWUSER | CLONE_NEWNS) != 0)
       err(1, "unshare");

   if (mount(mountpoint, mountpoint, ((void*)0), MS_REMOUNT | MS_BIND, ((void*)0)) < 0)
       err(1, "mount");

   fd2 = open(mountpoint, O_RDONLY | O_DIRECTORY);
   if (fd2 == -1)
       err(1, "open");

   if (dup3(fd2, evilfd, O_CLOEXEC) == -1)
       err(1, "dup3");
   close(fd2);

   printf("Mount hackery seems to have worked.\n");

   exit(0);
}
